src/scss/layout/admin/sidebar.scss
.sidebar-mobile-toggle {
  position: absolute;
  left: 0;
  cursor: pointer;
  float: left;
  width: 60px;
  height: 40px;
  font-size: 24px;
  color: #fff;
  background-color: #1350aa;
  border-radius: 0 12px 12px 0;
  display: flex;
  align-items: center;
  justify-content: center;

  &:hover {
    text-decoration: none;
  }
}

@media (min-width: 992px) {
  .sidebar-mobile-toggle {
    display: none;
  }
}

.sidebar-toggle {
  font-size: 24px;
  line-height: 24px;
  padding: 5px;
  text-align: center;
  cursor: pointer;
  position: absolute;
  bottom: -6px;
  right: -39px;
  width: 36px;
  height: 36px;
  transform: translate(-50%, -50%);
  background-color: #fff;
  box-shadow: 0 0 4px 0 rgba(12, 13, 13, 0.05), 0 2px 4px 0 rgba(12, 13, 13, 0.15);
  border-radius: 0 4px 4px 0;
  color: #000;
  z-index: 1;
}

@media (max-width: 991.98px) {
  .sidebar-toggle {
    display: none;
  }
}

.sidebar {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 87px;

  .content {
    background-color: #1350aa;
    border-radius: 0 8px 8px 0;
    width: 72px;
    height: 100%;
  }

  .nav-header {
    transition: padding-left 0.2s;
    padding-left: 0;
    width: 100%;
    height: 1px;
    margin-bottom: 10px;

    .name {
      color: #fff;
    }

    .nav-icons {
      display: none;
      justify-content: flex-start;
      width: 100%;
    }

    .nav-drawer {
      display: flex;
      margin-left: 12px;
      width: 100%;

      > div {
        display: flex;
        align-items: center;
        justify-content: center;
        width: 48px;

        &.sidebar-close {
          flex: 1 1 auto;
          justify-content: flex-end;
          margin-right: 24px;
        }
      }
    }
  }

  .nav-drawer-icons {
    margin-bottom: 40px;
  }

  .nav-options {
    padding-left: 0;
    transition: padding-left 0.2s;
    width: 100%;
    height: 44px;
    right: 10px;

    .nav-action i,
    a {
      color: #dce3e6;
    }

    &.is-disabled {
      .nav-action:hover,
      .nav-icons:hover,
      .nav-text:hover {
        color: #fff;
      }
    }

    &.selected {
      a,
      i {
        color: #fff;
      }
    }

    &:hover {
      background-color: rgba(255, 255, 255, 0.08);

      .nav-action,
      .nav-icons,
      .nav-text,
      a,
      i {
        color: #fff;
      }
    }

    &.selected {
      background-color: rgba(255, 255, 255, 0.16);

      .name {
        font-weight: 700;
      }
    }

    &.is-disabled {
      .nav-action,
      .nav-icons,
      .nav-text {
        cursor: default;
      }

      &:hover {
        .nav-icons i,
        a,
        i {
          color: rgba(255, 255, 255, 0.48);
        }
      }
    }
  }

  .nav-settings-text,
  .nav-settings-action {
    display: none;
    position: relative;
    float: left;
    height: 100%;
    align-items: center;
  }

  .nav-settings-text {
    width: 100px;
  }

  .nav-logo-option {
    position: absolute;
    bottom: 0;
    transition: padding-left 0.2s;
    padding-left: 0;
    width: 100%;
    height: 60px;

    .option-text .text > div {
      line-height: normal;
    }

    .sidebar-brand-logo,
    .sidebar-brand-icon {
      font-size: 24px;
      color: #dce3e6;
      transition: opacity 0.3s;
      -webkit-transition: opacity 0.3s;
    }

    .sidebar-brand-logo {
      font-size: 30px;
      font-weight: 600;
      opacity: 0;

      small {
        font-size: 11px;
      }
    }
  }

  .nav-spacer {
    border-bottom: 1px solid rgba(161, 107, 201, 0.16);
    margin-top: 10px;
    margin-bottom: 10px;
    width: 100%;
  }

  .nav-icons {
    position: relative;
    cursor: pointer;
    float: left;
    width: 72px;
    height: 100%;
    font-size: 24px;
    color: rgba(255, 255, 255, 0.48);
    display: flex;
    align-items: center;
    justify-content: center;

    .icon {
      display: flex;
      position: relative;

      .notification-badge {
        top: -5px;
        left: -9px;
      }

      img {
        width: 24px;
        height: 24px;
      }
    }
  }

  .nav-text,
  .nav-action {
    display: none;
    position: relative;
    float: left;
    height: 100%;
  }

  .nav-text {
    width: 150px;
  }

  .nav-action {
    width: 43px;
    color: #fff;

    i {
      color: #fff;
      transform: translate(0, -50%);
      position: absolute;
      top: 50%;
      font-size: 15px;
      right: 0;
      margin-right: 5px;
    }
  }

  .option-text .text {
    padding-left: 3px;
    max-width: 160px;
    position: absolute;
    top: 50%;
    transform: translate(0, -50%);

    > div {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      line-height: 20px;

      &.name {
        font-size: 14px;
      }
    }
  }
}

.sidebar-collapsed .sidebar {
  width: 295px;
  z-index: 12;

  .sidebar-toggle i:before {
    content: '\e922'; // ledger-icon-close
    font-family: 'Ledger';
  }

  .sidebar-brand-logo {
    opacity: 1;
  }

  .content {
    width: 280px;
    overflow-y: auto;
  }

  .nav-header {
    height: 60px;
    margin-bottom: 80px;
  }

  .nav-header,
  .nav-logo-option,
  .nav-options {
    transition: padding-left 0.2s;
    padding-left: 10px;
  }

  .nav-drawer-icons {
    display: none;
  }

  .nav-text,
  .nav-action,
  .nav-settings-text,
  .nav-settings-action,
  .nav-header .nav-icons {
    display: flex;
  }
}

@media (min-width: 992px) {
  .sidebar {
    z-index: 12;

   .nav-header .nav-drawer > div.sidebar-close {
      display: none;
    }
  }
}

@media (max-width: 575.98px) {
  .sidebar-collapsed .sidebar .nav-header {
    margin-bottom: 40px;
  }
}

